// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PublicLayoutWrapper rendering tests isAuthenticated false - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
    data-testid="public-layout-wrapper"
  >
    <header
      class="sticky top-0 z-50 border-b bg-background/95 backdrop-blur supports-backdrop-filter:bg-background/60"
    >
      <div
        class="max-w-9xl container mx-auto flex items-center justify-between px-4 py-4 sm:px-6"
      >
        <div
          class="flex items-center gap-8"
        >
          <a
            class="text-xl font-bold"
            data-testid="mock-link"
            href="/"
          >
            Vision Notes
          </a>
          <nav
            class="hidden items-center gap-6 md:flex"
          >
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="/explore"
            >
              Entdecken
            </a>
          </nav>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
            data-slot="button"
            data-testid="sign-in-link"
            href="/auth/sign-in"
          >
            Anmelden
          </a>
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
            data-slot="button"
            data-testid="sign-up-link"
            href="/auth/sign-up"
          >
            Kostenlos starten
          </a>
        </div>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/40 py-6"
    >
      <div
        class="container mx-auto flex max-w-7xl justify-between px-4 sm:px-6"
      >
        <p
          class="text-center text-sm text-muted-foreground"
        >
          © 
          2026
           
          Vision Notes
        </p>
        <nav
          class="hidden items-center gap-6 md:flex"
        >
          <div
            class="flex flex-col gap-2"
          >
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/agb"
            >
              AGB
            </a>
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/privacypolicy"
            >
              Datenschutz
            </a>
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/cookies"
            >
              Cookies
            </a>
          </div>
        </nav>
      </div>
    </footer>
  </div>
</div>
`;

exports[`PublicLayoutWrapper rendering tests isAuthenticated true - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
    data-testid="public-layout-wrapper"
  >
    <header
      class="sticky top-0 z-50 border-b bg-background/95 backdrop-blur supports-backdrop-filter:bg-background/60"
    >
      <div
        class="max-w-9xl container mx-auto flex items-center justify-between px-4 py-4 sm:px-6"
      >
        <div
          class="flex items-center gap-8"
        >
          <a
            class="text-xl font-bold"
            data-testid="mock-link"
            href="/"
          >
            Vision Notes
          </a>
          <nav
            class="hidden items-center gap-6 md:flex"
          >
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="/explore"
            >
              Entdecken
            </a>
          </nav>
        </div>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          data-testid="templates-link"
          href="/"
        >
          Zur Bibliothek
        </a>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/40 py-6"
    >
      <div
        class="container mx-auto flex max-w-7xl justify-between px-4 sm:px-6"
      >
        <p
          class="text-center text-sm text-muted-foreground"
        >
          © 
          2026
           
          Vision Notes
        </p>
        <nav
          class="hidden items-center gap-6 md:flex"
        >
          <div
            class="flex flex-col gap-2"
          >
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/agb"
            >
              AGB
            </a>
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/privacypolicy"
            >
              Datenschutz
            </a>
            <a
              class="text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
              data-testid="mock-link"
              href="http://www.vision-notes.com/legal/cookies"
            >
              Cookies
            </a>
          </div>
        </nav>
      </div>
    </footer>
  </div>
</div>
`;
